manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  scheduler
  namespace: default
  labels:
    app:  scheduler
spec:
  selector:
    matchLabels:
      app: scheduler
  replicas: 1
  template:
    metadata:
      labels:
        app:  scheduler
    spec:
      containers:
      - name:  scheduler
        image:  elygo/101-scheduler-kube:latest
        ports:
        - containerPort:  80
