manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scheduler-pong-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
        - path: /pong
          pathType: Prefix
          backend:
            service:
              name: pong
              port:
                number: 2345
        - path: /status
          pathType: Prefix
          backend:
            service:
              name: scheduler
              port:
                number: 2345
